// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`boxAlign renders 0 1`] = `
Array [
  .c0 {
  box-align: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-align: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-align: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-align: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`boxAlign renders function 1`] = `
Array [
  .c0 {
  box-align: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  box-align: has;
}

<div
    className="c0"
  />,
  .c0 {
  box-align: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  box-align: has;
}

<div
    className="c0"
  />,
]
`;

exports[`boxAlign renders invalid theme path 1`] = `
Array [
  .c0 {
  box-align: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-align: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-align: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-align: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`boxAlign renders negative number 1`] = `
Array [
  .c0 {
  box-align: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-align: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-align: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  box-align: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`boxAlign renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  box-align: July;
}

@media screen and (min-width:November) {
  .c0 {
    box-align: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-align: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-align: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-align: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  box-align: July;
}

@media screen and (min-width:November) {
  .c0 {
    box-align: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-align: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-align: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-align: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  box-align: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-align: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-align: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-align: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-align: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  box-align: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-align: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-align: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-align: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-align: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxAlign renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    box-align: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-align: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-align: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-align: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    box-align: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-align: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-align: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-align: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-align: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-align: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-align: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-align: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-align: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-align: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-align: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-align: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxAlign renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  box-align: July;
}

@media May {
  .c0 {
    box-align: August;
  }
}

@media April {
  .c0 {
    box-align: September;
  }
}

@media January {
  .c0 {
    box-align: November;
  }
}

@media April {
  .c0 {
    box-align: August;
  }
}

@media June {
  .c0 {
    box-align: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  box-align: July;
}

@media May {
  .c0 {
    box-align: August;
  }
}

@media April {
  .c0 {
    box-align: September;
  }
}

@media January {
  .c0 {
    box-align: November;
  }
}

@media April {
  .c0 {
    box-align: August;
  }
}

@media June {
  .c0 {
    box-align: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  box-align: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-align: November;
  }
}

@media April {
  .c0 {
    box-align: January;
  }
}

@media January {
  .c0 {
    box-align: December;
  }
}

@media April {
  .c0 {
    box-align: April;
  }
}

@media June {
  .c0 {
    box-align: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  box-align: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-align: November;
  }
}

@media April {
  .c0 {
    box-align: January;
  }
}

@media January {
  .c0 {
    box-align: December;
  }
}

@media April {
  .c0 {
    box-align: April;
  }
}

@media June {
  .c0 {
    box-align: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxAlign renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    box-align: July;
  }
}

@media April {
  .c0 {
    box-align: August;
  }
}

@media January {
  .c0 {
    box-align: September;
  }
}

@media April {
  .c0 {
    box-align: November;
  }
}

@media June {
  .c0 {
    box-align: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    box-align: July;
  }
}

@media April {
  .c0 {
    box-align: August;
  }
}

@media January {
  .c0 {
    box-align: September;
  }
}

@media April {
  .c0 {
    box-align: November;
  }
}

@media June {
  .c0 {
    box-align: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-align: January;
  }
}

@media April {
  .c0 {
    box-align: December;
  }
}

@media January {
  .c0 {
    box-align: April;
  }
}

@media April {
  .c0 {
    box-align: May;
  }
}

@media June {
  .c0 {
    box-align: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-align: January;
  }
}

@media April {
  .c0 {
    box-align: December;
  }
}

@media January {
  .c0 {
    box-align: April;
  }
}

@media April {
  .c0 {
    box-align: May;
  }
}

@media June {
  .c0 {
    box-align: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxAlign renders postitive number 1`] = `
Array [
  .c0 {
  box-align: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-align: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-align: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  box-align: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`boxAlign renders string 1`] = `
Array [
  .c0 {
  box-align: July;
}

<div
    className="c0"
  />,
  .c0 {
  box-align: July;
}

<div
    className="c0"
  />,
  .c0 {
  box-align: June;
}

<div
    className="c0"
  />,
  .c0 {
  box-align: June;
}

<div
    className="c0"
  />,
]
`;

exports[`boxAlign renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`boxAlign renders valid theme path 1`] = `
Array [
  .c0 {
  box-align: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-align: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-align: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-align: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
